tests/sksl/errors/ArrayOfVoidInStruct.glsl
### Compilation failed:

error: 4: type 'void' may not be used in a struct
error: 5: type 'void' may not be used in a struct
error: 6: multi-dimensional arrays are not supported
3 errors
